Fix filter search scrollbar/section size issue

--- a/www/public_src/styles/search.less
+++ b/www/public_src/styles/search.less
@@ -124,7 +124,7 @@ md-card.filter-card  {
   }
 }
 
-#searchRow {
+#searchModuleView {
   max-width:100%;
   overflow-x: auto;
   overflow-y: hidden;
